# gltron

./: .gitignore  CHANGELOG  CREDITS  CWProject.sit  ChangeLog  FAQ  GLtron.sln  GLtron.vcxproj  GLtron.vcxproj.filters  INSTALL  Makefile  Makefile.am  Makefile.in  PBProject.sit  README  README.CVS  README.GAMEPLAY  README.engine  README.html  README.lokisetup  README.md  README.music  SDLMain.m  SkyBox.cpp  SkyBox.h  Sound.h  SoundSystem.cpp  SoundSystem.h  Source.cpp  Source.h  Source3D.cpp  Source3D.h  SourceCopy.cpp  SourceCopy.h  SourceEngine.cpp  SourceEngine.h  SourceMusic.cpp  SourceMusic.h  SourceSample.cpp  SourceSample.h  (+209 more)
GLtron/: AppDelegate.h  AppDelegate.m  GLtron-Info.plist  gltron.c
GLtron.xcodeproj/: project.pbxproj
GLtron.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
GLtron.xcworkspace/: contents.xcworkspacedata
GLtron/audio/: sound.c  sound_glue.cpp  sound_glue_stubs.cpp  sound_stubs.c
GLtron/base/: util.c
GLtron/configuration/: settings.c
GLtron/en.lproj/: Credits.rtf
GLtron/filesystem/: dirsetup.c  path.c
GLtron/game/: 32bit_warning.c  camera.c  computer.c  computer_utilities.c  credits.c  engine.c  event.c  game.c  globals.c  gui.c  init.c  level.c  pause.c  resource.c  scripting_interface.c  switchCallbacks.c  timedemo.c
GLtron/glew/: glew.vcxproj  glew.vcxproj.filters
GLtron/input/: input.c
GLtron/lib3ds/: atmosphere.c  atmosphere.h  background.c  background.h  camera.c  camera.h  chunk.c  chunk.h  ease.c  ease.h  file.c  file.h  float.c  float.h  io.c  io.h  lib3ds.vcxproj  lib3ds.vcxproj.filters  light.c  light.h  material.c  material.h  matrix.c  matrix.h  mesh.c  mesh.h  node.c  node.h  quat.c  quat.h  shadow.c  shadow.h  tcb.c  tcb.h  tracks.c  tracks.h  vector.c  vector.h  viewport.c  viewport.h
GLtron/libpng/: libpng.vcxproj  libpng.vcxproj.filters
GLtron/lua5/: lapi.c  ldebug.c  ldo.c  lgc.c  lobject.c  lua5.vcxproj  lua5.vcxproj.filters  lundump.c  lvm.c
GLtron/nebu/: nebu.vcxproj  nebu.vcxproj.filters
GLtron/video/: artpack.c  explosion.c  fonts.c  gamegraphics.c  graphics_fx.c  graphics_hud.c  graphics_utility.c  graphics_world.c  hud.c  level.c  material.c  model.c  recognizer.c  screenshot.c  skybox.c  texture.c  trail.c  trail_render.c  trails_buffered.c  video.c  visuals_2d.c
GLtron/zlib/: gzlib.c  gzwrite.c  zlib.vcxproj
GLtronIOS/: GLtronIOS-Info.plist  GLtronIOSAppDelegate.h
GLtronIOSTests/: GLtronIOSTests.m
IOS-Resources/levels/: ring.lua  tri.lua
Resources-disabled/: 4squares.lua  arena.lua
art/: Makefile.am
art/biohazard/: Makefile.am  artpack.ini
art/default/: Makefile.am  artpack.ini  artpack.lua
data/: Makefile.am  courrier.ftx  fonts.txt  gltron.sgi  gltron_crash.sgi  gltron_floor.sgi  gltron_trail.sgi  gltron_traildecal.sgi  gltron_wall_1.sgi  gltron_wall_2.sgi  gltron_wall_3.sgi  gltron_wall_4.sgi  lightcycle-ultra-high.mtl  lightcycle.mtl  menu.txt  menu.txt.net  music.list  settings.txt  settings.txt.net  tron.mtl  tron2.mtl  xenotron.0.sgi  xenotron.1.sgi  xenotron.ftx
data/music/: Makefile.am  song_revenge_of_cats.it  song_taketrip.mod
docs/: README.lokisetup  TODO  jobs.txt  shadow-volumes.txt
flac/: FLAC.sdf
glew/: glew.vcproj
levels/: 4squares.lua  arena.lua  movie.lua  ring.lua  square.lua  tri.lua
lib3ds/: Makefile.am
libmodplug/: libmodplug.vcxproj  libmodplug.vcxproj.filters
lua/: lua.dsp  lua.vcproj
lua/src/: Makefile.am  lapi.c  ldo.c  lgc.c  lgc.h  lobject.c  lobject.h  lparser.c  lstring.c  lvm.c  lzio.c
lua/src/lib/: Makefile.am  lbaselib.c  liolib.c
lua5/: ldo.c  lua5.vcproj
mpg123/: mpg123.spec
music/: Makefile.am
nebu/: Makefile.am  nebu.dsp  nebu.vcproj
nebutest/: nebutest.c  nebutest.vcproj  video.c
resource/: setup.xml
scripts/: Makefile.am  artpack.lua  audio.lua  config.lua  console.lua  gauge.lua  hud-config.lua  hud.lua  main.lua  menu.lua  menu_functions.lua  save.lua  video.lua
server/: Makefile  Makefile~  README  TAGS  core  protocol.c  protocol.h  server  server.c  server.conf  server.c~  server_computer.c  server_data.h  server_engine.c  server_event.c  server_event.c~  server_globals.c  server_globals.c~  server_gltron.c  server_gltron.c~  server_gltron.h  server_gltron.h~  server_record.c  server_record.c~  server_settings.c  server_system.c  server_system.h  server_tracker.c  system.h~
sounds/: Makefile.am
src/: Makefile.am  gltron.c
src-base/: Makefile.am
src/audio/: Makefile.am  audio.c  sound.c  sound_glue.cpp  sound_glue_stubs.cpp
src/base/: util.c
src/configuration/: Makefile.am  settings.c
src/filesystem/: Makefile.am  dirsetup-macos.c  dirsetup-win32.c  path.c
src/game/: 32bit_warning.c  Makefile.am  artpack.c  camera.c  computer.c  computer_utilities.c  credits.c  engine.c  event.c  game.c  globals.c  gui.c  init.c  init_sdl.c  level.c  menu.c  pause.c  resource.c  scripting_interface.c  switchCallbacks.c  timedemo.c
src/include/audio/: audio.h  sound_glue.h
src/include/base/: switchCallbacks.h
src/include/configuration/: configuration.h  settings.h
src/include/filesystem/: dirsetup.h  path.h
src/include/game/: 32bit_warning.h  Makefile.am  ai.h  camera.h  data.h  engine.h  game.h  game_data.h  game_level.h  gltron.h  init.h  menu.h  resource.h
src/include/input/: input.h
src/include/scripting/: scripting.h
src/include/video/: explosion.h  graphics_fx.h  graphics_hud.h  graphics_lights.h  graphics_utility.h  model.h  nebu_mesh.h  recognizer.h  texture.h  trail_geometry.h  video.h  video_level.h
src/input/: input.c
src/scripting/: Makefile.am
src/video/: Makefile.am  artpack.c  explosion.c  fonts.c  fonttex.c  gamegraphics.c  graphics_fx.c  graphics_hud.c  graphics_lights.c  graphics_utility.c  graphics_world.c  hud.c  level.c  load_texture.c  material.c  model.c  recognizer.c  screenshot.c  skybox.c  texture.c  trail.c  trail_geometry.c  trail_render.c  trails_buffered.c  video.c  visuals_2d.c
tracker/: Makefile  protocol.txt  tracker.c  tracker.conf  tracker_globals.c  tracker_gltron.c  tracker_gltron.h  tracker_settings.c
win32/: gltron.iss
(+416 files in other folders)
