SUBDIRS = music

pkgdata_DATA = babbage.ftx fonts.txt game_crash.ogg game_crash.wav \
game_engine.ogg game_engine.wav game_recognizer.wav game_recognizer.ogg lightcycle-high.obj.gz lightcycle-low.obj.gz \
lightcycle-med.obj.gz lightcycle.mtl recognizer.mtl recognizer.obj.gz \
recognizer_quad.obj.gz settings.txt test.fbmp xenotron.ftx

EXTRA_DIST = $(pkgdata_DATA)

pkgdatadir = @datadir@/@PACKAGE@/data
