pkgdata_DATA = babbage.ftx fonts.txt game_crash.ogg game_crash.wav \
game_engine.ogg game_engine.wav game_recognizer.wav game_recognizer.ogg lightcycle-high.obj lightcycle-low.obj \
lightcycle-med.obj lightcycle.mtl recognizer.mtl recognizer.obj \
recognizer_quad.obj settings.txt test.fbmp xenotron.ftx

EXTRA_DIST = $(pkgdata_DATA)

pkgdatadir = @datadir@/@PACKAGE@/data
