pkgdata_DATA = artpack.lua babbage.0.png babbage.1.png gltron.png \
gltron_crash.png gltron_floor.png gltron_logo.png gltron_trail.png \
gltron_traildecal.png gltron_wall_1.png gltron_wall_2.png gltron_wall_3.png \
gltron_wall_4.png skybox0.png skybox1.png skybox2.png skybox3.png skybox4.png \
skybox5.png

EXTRA_DIST = $(pkgdata_DATA)

pkgdatadir = @datadir@/@PACKAGE@/art/biohazard
