dist_pkgdata_DATA = artpack.lua babbage.0.png babbage.1.png gltron.png \
gltron_bitmap.png gltron_floor.png gltron_logo.png \
gltron_trail.png gltron_traildecal.png \
walls.png skybox0.png skybox1.png \
skybox2.png skybox3.png skybox4.png skybox5.png test.bitmap.png \
xenotron.0.png xenotron.1.png gltron_impact.png

pkgdatadir = @datadir@/@PACKAGE@/art/default
